--- a/package.json
+++ b/package.json
@@ -25,11 +25,9 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "bash ./start.sh",
+    "rollup": "rollup -c --bundleConfigAsCjs",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lib": "rollup -c --bundleConfigAsCjs",
-    "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -51,10 +49,12 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "del": "^7.0.0",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-storybook": "^0.6.13",
+    "gulp": "^4.0.2",
     "postcss": "^8.4.28",
     "postcss-modules": "^6.0.0",
     "react": "^18.2.0",
